# TailGen

./: .gitignore  README.md  pyproject.toml
tailgen/: __init__.py  __main__.py  cli.py  config.py  helpers.py  venv_gen.py
tailgen/fastapi_app/: __init__.py
tailgen/flask_app/: __init__.py
tests/: test_tailgen.py
